--- a/src/Orchestra.Shell.MahApps/Orchestra.Shell.MahApps.csproj
+++ b/src/Orchestra.Shell.MahApps/Orchestra.Shell.MahApps.csproj
@@ -1,31 +1,28 @@
-﻿<Project Sdk="MSBuild.Sdk.Extras">
+<Project Sdk="MSBuild.Sdk.Extras">
   <PropertyGroup>
     <TargetFrameworks>net46;net47;netcoreapp3.0</TargetFrameworks>
     <AssemblyName>Orchestra.Shell.MahApps</AssemblyName>
     <RootNamespace>Orchestra</RootNamespace>
     <DefaultLanguage>en-US</DefaultLanguage>
     <PackageId>Orchestra.Shell.MahApps</PackageId>
-    <PackageVersion>1.0.0-alpha0001</PackageVersion>
+    <PackageVersion>5.4.0-develop-wild0293</PackageVersion>
     <Description>Orchestra shell using MahApps.Metro library.</Description>
     <PackageTags>orc;orchestra;wpf;xaml;shell;mahapps;metro</PackageTags>
   </PropertyGroup>
-
   <PropertyGroup>
     <UseWpf>true</UseWpf>
     <UseWindowsForms>true</UseWindowsForms>
     <ExtrasEnableImplicitWpfReferences>true</ExtrasEnableImplicitWpfReferences>
     <ExtrasEnableImplicitWinFormsReferences>true</ExtrasEnableImplicitWinFormsReferences>
   </PropertyGroup>
-
   <PropertyGroup>
     <!-- SonarQube requires a project guid -->
     <ProjectGuid>084B7CDB-15B4-400A-B1EE-9596F1CBE6B2</ProjectGuid>
   </PropertyGroup>
-  
   <ItemGroup>
     <PackageReference Include="Catel.Analyzers" Version="1.0.0" PrivateAssets="all" />
-    <PackageReference Include="Catel.Fody" Version="4.3.0" PrivateAssets="all" />
-    <PackageReference Include="Catel.MVVM" Version="5.12.0" />
+    <PackageReference Include="Catel.Fody" Version="4.4.0-alpha0078" PrivateAssets="all" />
+    <PackageReference Include="Catel.MVVM" Version="6.0.0-develop-local0103" />
     <PackageReference Include="ControlzEx" Version="4.2.0" />
     <PackageReference Include="Costura.Fody" Version="4.1.0" PrivateAssets="all" />
     <PackageReference Include="Fody" Version="6.0.5" PrivateAssets="all">
@@ -41,11 +38,9 @@
     <PackageReference Include="WpfAnalyzers" Version="2.4.0" PrivateAssets="all" />
     <PackageReference Include="XamlColorSchemeGenerator" version="3.0.0.31" privateAssets="All" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\Orchestra.Core\Orchestra.Core.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
@@ -53,25 +48,21 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
-
   <ItemGroup>
     <EmbeddedResource Update="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Update="NETStandard.Library" Version="2.0.1" />
   </ItemGroup>
-
   <ItemGroup>
     <Compile Include="..\Orchestra.Shell.Shared\**\*.cs">
       <Link>%(RecursiveDir)%(FileName)%(Extension)</Link>
-    </Compile>    
+    </Compile>
     <Compile Remove="..\Orchestra.Shell.Shared\Properties\**" />
-  </ItemGroup>  
-  
+  </ItemGroup>
   <Import Project="$(MSBuildProjectDirectory)\..\Directory.build.shared.explicit.props" Condition="Exists('$(MSBuildProjectDirectory)\..\Directory.build.shared.explicit.props')" />
   <Import Project="$(MSBuildProjectDirectory)\..\Directory.build.shared.mat.props" Condition="Exists('$(MSBuildProjectDirectory)\..\Directory.build.shared.mat.props')" />
 </Project>
