--- a/src/Orchestra.Examples.MahApps/Orchestra.Examples.MahApps.csproj
+++ b/src/Orchestra.Examples.MahApps/Orchestra.Examples.MahApps.csproj
@@ -23,8 +23,8 @@
 
   <ItemGroup>
     <PackageReference Include="Catel.Analyzers" Version="1.0.0" PrivateAssets="all" />
-    <PackageReference Include="Catel.MVVM" Version="5.12.0" />
-    <PackageReference Include="Catel.Fody" Version="4.3.0" PrivateAssets="all" />
+    <PackageReference Include="Catel.MVVM" Version="6.0.0-develop-local0103" />
+    <PackageReference Include="Catel.Fody" Version="4.4.0-alpha0078" PrivateAssets="all" />
     <PackageReference Include="Fody" Version="6.0.5" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
